 syntax = "proto3";
 
 option java_multiple_files = true;
 option java_package = "patientMonitoringService";
 option java_outer_classname = "PatientMonitoringServiceImpl";
 
  //package patientMonitoringService
 package patientMonitoringService;
 
 service PatientMonitoringService {
 	
 	//Unary Call
 	rpc monitoringDeviceOnOff(DeviceRequest) returns (DeviceResponse){}
 
 	//Bi-Directional
 	rpc bloodPressure(stream PressureRequest) returns (stream PressureResponse){} 
 }
 
 //Unary Call 
 message DeviceRequest{ 
  	string text = 1;  
 }
 
 message DeviceResponse{ 
 	string value = 1; 
 }
 
 //Bi-Directional
 message PressureRequest{  
 	float systolic = 1;
 	float diastolic = 2; 	
 }
 
 message PressureResponse{ 
 	string result = 1; 	
 }  